Bug 244823 - WMF: kpresenter:msoffice2003:graphs are not getting displayed in kpresenter
Summary: WMF: kpresenter:msoffice2003:graphs are not getting displayed in kpresenter
Status: VERIFIED FIXED
Alias: None
Product: calligracommon
Classification: Applications
Component: flake-plugins (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Inge Wallin
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-07-16 07:56 UTC by swathi
Modified: 2011-05-27 14:06 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Test data to be open in Kpresenter (84.50 KB, application/vnd.ms-powerpoint)
2010-07-16 07:56 UTC, swathi
Details
Screenshot in Kpresenter (32.46 KB, image/x-png)
2010-07-16 07:58 UTC, swathi
Details
Screenshot in MS Powerpoint 2003 (90.52 KB, image/x-png)
2010-07-16 07:59 UTC, swathi
Details
ODP file created using koconverter (10.53 KB, application/vnd.oasis.opendocument.presentation)
2010-08-16 07:39 UTC, swathi
Details

Note You need to log in before you can comment on or make changes to this bug.
Description swathi 2010-07-16 07:56:31 UTC
Created attachment 49197 [details]
Test data to be open in Kpresenter

Version:           svn (using KDE 4.4.3) 
OS:                Linux

Graphs are not getting displayed.
Test document is created using MSPowerpont 2003.


Reproducible: Always

Steps to Reproduce:

1. Open the attached document in MS Powerpoint 2003.
2. Open the same document in KOffice.
3. Observe the graph in the slide.

Actual Results:  
kpresenter in not displaying the graphs.
See the attachment graph3-kpresenter.png

Expected Results:  
Kpresenter should be able to display the graphs.
See the attachment graph3_msppt.PNG

SOFTWARE VERSION:
  Kubuntu 9.10
  Koffice (svn version 1148832)
  Test document (MS Powerpoint 2003):mp03_graph3.ppt
Comment 1 swathi 2010-07-16 07:58:04 UTC
Created attachment 49198 [details]
Screenshot in Kpresenter
Comment 2 swathi 2010-07-16 07:59:08 UTC
Created attachment 49199 [details]
Screenshot in MS Powerpoint 2003
Comment 3 swathi 2010-07-16 07:59:33 UTC
adding nandita in CC.
Comment 4 swathi 2010-08-16 07:38:18 UTC
Converted the test data to .odp file using koconverter.
OOImpress loads the file as expected.(Graphs are displaying).
Guessing it to be koffice core problem.
Comment 5 swathi 2010-08-16 07:39:36 UTC
Created attachment 50599 [details]
ODP  file created using koconverter
Comment 6 T Zachmann 2011-01-30 07:45:11 UTC
The embedded wmf file is now displayed however in stage the image is mirrored. It is correctly shown in ooimpress.
Comment 7 Inge Wallin 2011-04-07 17:16:29 UTC
WMF issue, moved to calligra-common.
Comment 8 Inge Wallin 2011-05-10 17:08:34 UTC
Git commit 82ea4db3f86faae5759636874fa7fa4bf4667344 by Inge Wallin.
Committed on 10/05/2011 at 17:06.
Pushed by ingwa into branch 'master'.

WMF: Make text using font size < 0 work.

This means that when a picture is upside down due to some
transformation, the text output will use so called 'device
coordinates' which means that the text will be written correctly
anyway.

This solves a number of irritating bugs.

BUG: 244823
BUG: 239799

M  +3    -1    filters/karbon/wmf/wmfimportparser.cc     
M  +1    -1    filters/karbon/wmf/wmfimportparser.h     
M  +19   -4    filters/libkowmf/kowmfpaint.cc     
M  +3    -1    filters/libkowmf/kowmfpaint.h     
M  +1    -1    filters/libkowmf/kowmfread.h     
M  +4    -4    filters/libkowmf/kowmfreadprivate.cc     
M  +1    -1    filters/libkowmf/kowmfstack.cc     
M  +1    -0    filters/libkowmf/kowmfstack.h     

http://commits.kde.org/calligra/82ea4db3f86faae5759636874fa7fa4bf4667344
Comment 9 swathi 2011-05-27 14:06:08 UTC
Verified in 70e1b6e65bcc89bffdd1ba4c9903469827c2c213.