WMF: Make text using font size < 0 work.

This means that when a picture is upside down due to some
transformation, the text output will use so called 'device
coordinates' which means that the text will be written correctly
anyway.

This solves a number of irritating bugs.

BUG: 244823
BUG: 239799